[gd_scene load_steps=11 format=3 uid="uid://bfjaqu2i4i63i"]

[ext_resource type="Script" path="res://views/FPS.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://4typrc2p2rra" path="res://icon.png" id="2"]
[ext_resource type="Theme" uid="uid://co811ue55i33m" path="res://resources/base_theme.tres" id="2_1ffbx"]
[ext_resource type="Script" path="res://views/MainMenu.gd" id="4"]
[ext_resource type="PackedScene" path="res://lib/BetterCam.tscn" id="5"]
[ext_resource type="Script" path="res://views/Splash.gd" id="6"]
[ext_resource type="Script" path="res://views/GameBar.gd" id="7_cr1ei"]
[ext_resource type="Script" path="res://views/About.gd" id="7_xk6j8"]
[ext_resource type="Script" path="res://views/SelectionDetail.gd" id="8_4qo2d"]
[ext_resource type="Script" path="res://views/BuildOptions.gd" id="8_r2c2g"]

[node name="Node2D" type="Node2D"]

[node name="UIRoot" type="CanvasLayer" parent="."]

[node name="MainMenu" type="CenterContainer" parent="UIRoot"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1ffbx")
script = ExtResource("4")

[node name="PanelContainer" type="PanelContainer" parent="UIRoot/MainMenu"]
custom_minimum_size = Vector2(2.08165e-12, 600)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UIRoot/MainMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UIRoot/MainMenu/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="UIRoot/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_1ffbx")
theme_type_variation = &"H1"
text = "Main Menu"

[node name="Play" type="Button" parent="UIRoot/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Play"

[node name="Editor" type="Button" parent="UIRoot/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Editor"

[node name="About" type="Button" parent="UIRoot/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "About"

[node name="FPS" type="MarginContainer" parent="UIRoot"]
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="Label" type="Label" parent="UIRoot/FPS"]
layout_mode = 2
text = "144 FPS"
script = ExtResource("1")

[node name="Splash" type="ColorRect" parent="UIRoot"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("6")

[node name="TextureRect" type="TextureRect" parent="UIRoot/Splash"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")

[node name="About" type="CenterContainer" parent="UIRoot"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1ffbx")
script = ExtResource("7_xk6j8")

[node name="PanelContainer" type="PanelContainer" parent="UIRoot/About"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UIRoot/About/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UIRoot/About/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIRoot/About/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"H1"
text = "About"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="UIRoot/About/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LargeLabel"
text = "Made by: Greyson Richey
Made with Godot"

[node name="MainMenu" type="Button" parent="UIRoot/About/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[node name="GameBar" type="PanelContainer" parent="UIRoot"]
visible = false
clip_contents = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0
theme = ExtResource("2_1ffbx")
script = ExtResource("7_cr1ei")

[node name="HBoxContainer" type="HBoxContainer" parent="UIRoot/GameBar"]
layout_mode = 2

[node name="SelectionDetail" type="PanelContainer" parent="UIRoot/GameBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("8_4qo2d")

[node name="MarginContainer" type="MarginContainer" parent="UIRoot/GameBar/HBoxContainer/SelectionDetail"]
layout_mode = 2

[node name="SelectionDetailInner" type="VBoxContainer" parent="UIRoot/GameBar/HBoxContainer/SelectionDetail/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UIRoot/GameBar/HBoxContainer/SelectionDetail/MarginContainer/SelectionDetailInner"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="SelectionDetailTexture" type="TextureRect" parent="UIRoot/GameBar/HBoxContainer/SelectionDetail/MarginContainer/SelectionDetailInner/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 2.08165e-12)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="SelectionDetailName" type="Label" parent="UIRoot/GameBar/HBoxContainer/SelectionDetail/MarginContainer/SelectionDetailInner/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SelectionDetailDescription" type="Label" parent="UIRoot/GameBar/HBoxContainer/SelectionDetail/MarginContainer/SelectionDetailInner"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="BuildOptions" type="PanelContainer" parent="UIRoot/GameBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
script = ExtResource("8_r2c2g")

[node name="MarginContainer" type="MarginContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer"]
layout_mode = 2

[node name="Logistics" type="MarginContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer/TabContainer"]
layout_mode = 2

[node name="Logistics" type="ScrollContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer/TabContainer/Logistics"]
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 0

[node name="BuildOptionsLogistics" type="HBoxContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer/TabContainer/Logistics/Logistics"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Resources" type="MarginContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Resources" type="ScrollContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer/TabContainer/Resources"]
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 0

[node name="BuildOptionsResources" type="HBoxContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer/TabContainer/Resources/Resources"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Civic" type="MarginContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Civic" type="ScrollContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer/TabContainer/Civic"]
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 0

[node name="BuildOptionsCivic" type="HBoxContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer/TabContainer/Civic/Civic"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Misc" type="MarginContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Misc" type="ScrollContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer/TabContainer/Misc"]
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 0

[node name="BuildOptionsMisc" type="HBoxContainer" parent="UIRoot/GameBar/HBoxContainer/BuildOptions/MarginContainer/TabContainer/Misc/Misc"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="BetterCam" parent="." instance=ExtResource("5")]
zoom = Vector2(0.75, 0.75)
zoom_min = 0.5
zoom_max = 2.0

[node name="LevelContainer" type="Node2D" parent="." groups=["LevelContainer"]]
